--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -7219,6 +7219,12 @@ textarea:-ms-input-placeholder {
     font-size: 16px;
     font-weight: 500;
 }
+.total-form input,
+.table_desc .cart_page table tbody tr td.product-price input {
+    border-color: transparent;
+    outline: none;
+    text-align: center;
+}
 
 .table_desc .cart_page table tbody tr td.product_quantity {
     min-width: 180px;
