add function login

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -176,8 +176,10 @@
                     <div class="col-lg-4 col-md-4 col-sm-5 col-4">
                         <div class="cart_wishlist_area">
                             <div class="header_wishlist">
-                                <a href="wishlist.html"><i class="fa fa-heart-o" aria-hidden="true"></i>
-                                    <span class="item_count">3</span>
+                                <a th:href="@{/login}"><i class="fa fa-user"></i>
+                                    <span style="font-size:13px;text-transform: uppercase;" class="cartitems"> Đăng nhập</span>
+
+                                    <!--                                    <span class="item_count">Đăng nhập</span>-->
                                 </a>
                             </div>
                             <div class="mini_cart_wrapper">
