--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -181,8 +181,10 @@
                     <div class="col-lg-4 col-md-4 col-sm-5 col-4">
                         <div class="cart_wishlist_area">
                             <div class="header_wishlist">
-                                <a href="wishlist.html"><i class="fa fa-heart-o" aria-hidden="true"></i>
-                                    <span class="item_count">3</span>
+                                <a th:href="@{/login}"><i class="fa fa-user"></i>
+                                    <span style="font-size:13px;text-transform: uppercase;" class="cartitems"> Đăng nhập</span>
+
+                                    <!--                                    <span class="item_count">Đăng nhập</span>-->
                                 </a>
                             </div>
                             <div class="mini_cart_wrapper">
@@ -297,10 +299,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="breadcrumb_content">
-                        <h3>shop</h3>
+
                         <ul>
-                            <li><a th:href="@{/}">home</a></li>
-                            <li>shop</li>
+                            <li><a th:href="@{/}">Trang chủ</a></li>
+                            <li>Sản phẩm</li>
                         </ul>
                     </div>
                 </div>
